# gmail-html-tester

./: GEMINI.md  README.md  demo_template.html  email_template.html  main.py  mcp_server.py  pyproject.toml  send_html_email.py
.github/workflows/: pre-commit.yml
mailer/: __init__.py  generator.py  mock.py  parser.py  smtp.py
src/gmail_html_tester/: cli.py  config.py  generator.py  mock.py  parser.py  smtp.py  utils.py
src/gmail_html_tester/mcp/: __init__.py  app.py  resources.py  schemas.py  server.py  tools.py
src/gmail_html_tester/mock/: __init__.py  constants.py  mocks.py  utils.py
templates/: email_template.html
tests/: __init__.py
