[project]
name = "gmail-html-tester"
version = "0.1.0"
description = "The fastest way to test, visualize, and finalize your HTML email templates."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "python-dotenv",
]

[project.scripts]
gmail-tester = "mailer.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mailer"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
