[project]
name = "gmail-html-tester"
version = "0.1.0"
description = "The fastest way to test, visualize, and finalize your HTML email templates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.2",
    "google-genai>=2.8.0",
    "jinja2",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv",
]

[project.scripts]
_internal-gmail-cli = "gmail_html_tester.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_html_tester"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
